--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 *   { 
-    box-sizing: border-box
+    box-sizing: border-box;
     }
 
 body{
-    margin: 0px;
+    position: relative;
+    display: grid;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer";
+    grid-template-rows: 3rem 1fr 5rem;
+    margin: 0px; 
 }
 :root {
     --dark-hues: #1B1725;
@@ -17,9 +24,11 @@ header  {
         text-align: center;
         color: var(--text-hue);
         position: fixed;
+        height: 3rem;
         width: 100%;
-        z-index: -999;
-        }
+        z-index: 99999;
+        grid-area: header;
+}
 
 nav {
     background-color: var(--dark-hues);
@@ -28,8 +37,9 @@ nav {
     top: 100%;
     left: 0;
     text-align: left;
-    display: none;
-
+    transform: scale(1,0);
+    transform-origin: top;
+    transition: transform 400ms ease-in-out;
 }
 nav ul{
     margin: 0;
@@ -39,21 +49,29 @@ nav ul{
 
 nav ul>li {
     line-height: 1.5em;
-    margin-bottom: 1em;
+    margin-bottom: 1em;;
 }
 
 nav a {
     color: var(--text-hue);
     text-decoration: none;
     text-transform: uppercase;
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
 }
 nav a:hover{
-    color: var(--dark-hues);
+    color: var(--highlights);
     
 }
 
 .nav-toggle:checked ~ nav{
-display: block;
+transform: scale(1);
+}
+
+.nav-toggle:checked ~ nav a{
+    opacity: 1;display: block;
+    transition: opacity 400ms ease-in-out;
+    z-index: 9999;
 }
 
 .nav-toggle{
@@ -70,5 +88,187 @@ display: block;
     margin-left: 1em;
 }
 
+.nav-toggle-label span::after, 
+.nav-toggle-label span:before,
+.nav-toggle-label span {
+    display: block;
+    background: white;
+    height: 2px;
+    width: 1.6em;
+    border-radius: 2px;
 
-h1{margin: 0;}
+}
+.nav-toggle-label span::after, 
+.nav-toggle-label span::before{
+    content: '';
+    position: absolute;
+}
+.nav-toggle-label span::before{
+    bottom: 10px;
+}
+.nav-toggle-label span::after{
+    top:10px;
+}
+.banner{
+    position:relative;
+
+}
+.logo{
+ border: solid;
+ position: absolute;
+ top: 0.5rem;
+ right: 1rem;
+ padding: 0rem 0.5rem;
+}
+h1{
+    text-transform: uppercase;
+    margin:0;  
+    display: none;  
+}
+
+main{
+    grid-area: main;
+    display: grid;
+}
+
+h3{
+    text-align: center;
+    text-transform: uppercase;
+}
+.hero-section{
+    background-image: url("images/dev.jpg");
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.hero-text{
+    text-align:center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.projects, .about{
+    width: 80%;
+    margin: auto;
+}
+.about-container{
+    display: flex;
+    flex-direction: row;
+
+}
+
+.my-picture-style{
+    float: left;
+    margin-right: 20px;
+}
+.about-me{
+    width: 60%;
+}
+
+.skills{
+    margin-left: 3rem;
+}
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows:  1fr 1fr;
+    grid-gap: 0.5rem;
+
+
+}
+.project-tile{
+    object-fit: cover;
+
+}
+.project-image{
+    max-width: 100%;
+    height: 100%;
+
+}
+
+.block{
+
+    width: 80%;
+    margin: auto;
+    background: var(--highlights);
+    padding: 2rem;
+}
+
+input{
+    width: 70%;
+}
+footer{
+    grid-area: footer;
+    background: var(--dark-hues);
+    color: var(--text-hue);
+    padding: 1rem;
+}
+
+@media (min-width: 800px) {
+    .nav-toggle-label{
+        display: none;
+    }
+    header{
+        height: initial;
+        display: grid;
+        grid-template-columns: auto auto minmax(300px, 3fr);
+        align-items: center;
+        padding: 0 1em;
+    }
+
+    .banner{display: flex;
+        align-items: center;}
+
+    .logo{
+        all:unset;
+        grid-column: 1/2;
+        padding:0.5rem;
+        border: solid;
+        margin: 0.5em;
+    }
+    h1{
+        grid-column: 2/3;
+        display: block;
+        transition: scale(0, 1);
+    }
+    nav{
+        all: unset;
+        grid-column: 3/4;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    nav ul{        
+        display: flex;
+        padding: 0;
+    }
+
+    nav ul>li{
+        margin-left: 2em;
+        margin-bottom: 0;
+    }
+    
+    nav a {opacity: 1;}
+
+    nav a::before{
+        content: "";
+        display: block;
+        height: 4px;
+        background: var(--highlights);
+        top: -.75em;
+        left: 0;
+        right: 0; 
+        transform: scale(0,1);
+        transition: transform ease-in-out 250ms;
+        transform-origin: left;
+    }
+
+    nav a:hover::before{
+        transform: scale(1,1);
+    }
+}
